# prometheus-skill-system

./: .gitattributes  .gitignore  .gitmodules  .mcp.json  .prettierignore  .prettierrc.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package.json
.claude-plugin/: plugin.json
.github/workflows/: validate.yml
.opencode/: package.json
.opencode/tools/: evolve.ts  gitops.ts  kbd.ts
.prometheus/traces/iterative-evolver/: 20260415-102150.json
.prometheus/traces/skill-health/: 20260415-102150.json
.prometheus/traces/superpowers:brainstorming/: 20260415-102150.json
agents/: gitops-architect.md
docs/: CONTRIBUTING.md  IMPORTING_SKILLS.md  QUICK_REFERENCE.md  SKILL_TEMPLATE.md  SUBMODULES.md
examples/example-skill/: SKILL.md
examples/example-skill/assets/: template.json
examples/example-skill/references/: DETAILED_GUIDE.md
examples/example-skill/scripts/: example.sh
hooks/: hooks.json
marketplace/: marketplace.json
policies/: README.md  entities.json  skill-mutation.cedar
scripts/: build-marketplace.js  check-prerequisites.sh  install-platforms.ts  install-skills-flat.sh  install.js  validate-skills.js
shared/references/: self-learning-architecture.md  surreal-memory-integration.md
shared/scripts/: README.md  detect-project-context.sh  guard-direct-deploy.sh  validate-gitops-write.sh
skills/devops/argocd-multicloud/: SKILL.md
skills/devops/gitops-bootstrap/: SKILL.md
skills/devops/gitops-bootstrap/scripts/: detect-cloud.sh  register-clusters.sh
skills/devops/gitops-transform/: SKILL.md
skills/devops/gitops-transform/scripts/: detect-stack.sh
skills/devops/kustomize-overlay/: SKILL.md
skills/imported/: README.md
skills/process/iterative-evolver/: .mcp.json  CLAUDE.md  README.md  SKILL.md
skills/process/iterative-evolver/agents/: analyst.md  assessor.md  executor.md  planner.md  reflector.md
skills/process/iterative-evolver/prompts/: analyze.md  assess.md  execute.md  meta-controller.md  persist.md  plan.md  reflect.md
skills/process/iterative-evolver/references/: model-routing.md  pmpo-theory.md  state-management.md  workflow-integration.md
skills/process/iterative-evolver/references/domain/: business.md  compliance.md  content.md  generic.md  operations.md  product.md  research.md  software.md
skills/process/iterative-evolver/references/integrations/: artifact-refiner.md  kbd-orchestrator.md
skills/process/iterative-evolver/references/schemas/: assessment.schema.json  evolution-state.schema.json  hook-event.schema.json
skills/process/iterative-evolver/skills/evolve/: SKILL.md
skills/process/iterative-evolver/skills/evolve-analyze/: SKILL.md
skills/process/iterative-evolver/skills/evolve-assess/: SKILL.md
skills/process/iterative-evolver/skills/evolve-execute/: SKILL.md
skills/process/iterative-evolver/skills/evolve-plan/: SKILL.md
skills/process/iterative-evolver/skills/evolve-report/: SKILL.md
skills/process/iterative-evolver/skills/evolve-status/: SKILL.md
skills/process/kbd-process-orchestrator/: SKILL.md
skills/process/kbd-process-orchestrator/prompts/: assess.md  execute.md  plan.md  reflect.md
skills/process/kbd-process-orchestrator/references/: constraints.md  cross-tool-handoff.md  model-routing.md  slash-command-formats.md  workspace-context.md
skills/process/kbd-process-orchestrator/references/domain/: kbd.md
skills/process/liter-llm-bridge/: SKILL.md
skills/process/liter-llm-bridge/prompts/: configure.md  install.md  route.md
skills/process/liter-llm-bridge/references/: mcp-tools.md  provider-env-vars.md
skills/process/liter-llm-bridge/scripts/: configure-mcp.sh  detect-cargo.sh  detect-providers.sh  install-liter-llm.sh
skills/process/pmpo-skill-creator/: AGENTS.md  CLAUDE.md  SKILL.md
skills/process/pmpo-skill-creator/agents/: architect.md  generator.md  validator.md
skills/process/pmpo-skill-creator/prompts/: execute.md  meta-controller.md  persist.md  plan.md  reflect.md  specify.md
skills/process/pmpo-skill-creator/references/: agentskills-spec.md  exemplar-skills.md  platform-adapters.md  plugin-structure.md  pmpo-theory.md
skills/react/prometheus-entity-skills/: SKILL.md  SKILLS.md
skills/react/prometheus-entity-skills/.claude-plugin/: marketplace.json  plugin.json
skills/react/prometheus-entity-skills/entity-graph-crud/: AGENTS.md  CLAUDE.md  SKILL.md
skills/react/prometheus-entity-skills/entity-graph-graphql/: AGENTS.md  CLAUDE.md  SKILL.md
skills/react/prometheus-entity-skills/entity-graph-optimize/: AGENTS.md  CLAUDE.md  SKILL.md
skills/react/prometheus-entity-skills/entity-graph-prisma/: AGENTS.md  CLAUDE.md  SKILL.md
skills/react/prometheus-entity-skills/entity-graph-realtime/: AGENTS.md  CLAUDE.md  SKILL.md
skills/react/prometheus-entity-skills/entity-graph-setup/: AGENTS.md  CLAUDE.md  SKILL.md
skills/testing/bdd-testing/: SKILL.md
skills/testing/bdd-testing/references/: video-recording.md  world-pattern.md
tools/prometheus-cli/: Cargo.toml
tools/prometheus-cli/.prometheus/traces/iterative-evolver/: 20260415-102126.json
tools/prometheus-cli/.prometheus/traces/skill-health/: 20260415-102126.json
tools/prometheus-cli/.prometheus/traces/superpowers:brainstorming/: 20260415-102126.json
tools/prometheus-cli/crates/prometheus-agents/: Cargo.toml
tools/prometheus-cli/crates/prometheus-agents/src/: config.rs  detect.rs  lib.rs  trace_protocol.rs
tools/prometheus-cli/crates/prometheus-cedar/: Cargo.toml
tools/prometheus-cli/crates/prometheus-cedar/src/: lib.rs
tools/prometheus-cli/crates/prometheus-cli/: Cargo.toml
tools/prometheus-cli/crates/prometheus-cli/src/: main.rs
tools/prometheus-cli/crates/prometheus-cli/src/commands/: audit.rs  build.rs  doctor.rs  evolve.rs  generate.rs  install.rs  learn.rs  list.rs  memory.rs  mod.rs  optimize.rs  policy.rs  search.rs  status.rs  sycophancy.rs  uninstall.rs  validate.rs  verify.rs
tools/prometheus-cli/crates/prometheus-learn/: Cargo.toml
tools/prometheus-cli/crates/prometheus-learn/src/: compile.rs  evaluate.rs  lib.rs  memory.rs  optimize.rs  trace.rs
(+124 files in other folders)
