[package]
name = "prometheus-cedar"
description = "Cedar policy enforcement for skill mutations — governs prompt optimization, skill generation, and promotion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cedar-policy = "4"
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
