[package]
name = "prometheus-cli"
description = "CLI companion for prometheus-skill-pack — manages skills, validates GitOps, runs self-learning pipeline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "prometheus"
path = "src/main.rs"

[dependencies]
# Workspace crates
prometheus-agents.workspace = true
prometheus-learn.workspace = true
prometheus-cedar.workspace = true

# Core
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
reqwest.workspace = true
colored.workspace = true
chrono.workspace = true
dirs.workspace = true
walkdir.workspace = true
sha2.workspace = true
regex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# GitHub API
octocrab.workspace = true
