[package]
name = "prometheus-learn"
description = "Self-learning pipeline — execution trace capture, knowledge compilation, and dspy-rs prompt optimization"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
sha2.workspace = true
