[package]
name = "prometheus-learn"
description = "Self-learning pipeline — execution trace capture, knowledge compilation, and dspy-rs prompt optimization"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
# Enable knowledge compilation via prometheus-knowledge (requires LLM API access)
knowledge = ["dep:pk-core", "dep:pk-librarian", "dep:pk-store"]
# Enable prompt optimization via dspy-rs (requires LLM API access)
optimize = ["dep:dspy"]
# Enable sycophancy detection in trace evaluation
sycophancy = ["dep:sycophancy-core"]
# Enable all
full = ["knowledge", "optimize", "sycophancy"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
sha2.workspace = true

# Prometheus ecosystem — optional, gated behind feature flags
pk-core = { workspace = true, optional = true }
pk-librarian = { workspace = true, optional = true }
pk-store = { workspace = true, optional = true }
dspy = { workspace = true, optional = true }
sycophancy-core = { workspace = true, optional = true }
